--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         <section id="todays-tip">
             <h4>Today's Top Tip</h4>
             <br>
-            <p><strong>Discover the average first and last frost dates for your area.</strong><br>
+            <p>
+                <strong>Discover the average first and last frost dates for your area.</strong><br>
                 <br>
                 Planting too early (or late) in the season can spell disaster for your garden.<br>
                 <br>
@@ -108,6 +109,7 @@
                 <a href="https://miraclegro.com/en-us/gardening-101/10-top-gardening-tips-for-beginners.html" target="_blank" rel="noopener" aria-label="Go to miraclegro page for the source of this tip. (Page opens in a new tab.)"> miraclegro.com</a>
             </h5>
             <br>
+            <!-- Youtube video container -->
             <div id="video-container">
                 <iframe id="frost-video" src="https://www.youtube.com/embed/EW01jeZGlQE?si=ExT1hFIeGFn6CcDa&mute=1" title="YouTube video player" controls muted allowfullscreen></iframe>
             </div>
@@ -122,8 +124,9 @@
                 <button aria-label="Go to subscribe page to subscribe to our newsletter. (Page opens in the same window.)">Subscribe</button>
             </form>
         </section>
+        <!-- To top button -->
         <div id="top-button-container">
-            <a id="top-button" href="#top">Top</a>
+            <a id="top-button" href="#top" aria-label="Go to the top of the page">Top</a>
         </div>
     </main>
     <!-- Footer -->
