--- a/response.html
+++ b/response.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <!-- Styles -->
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- Title -->
     <title>Fresh Patch</title>
 </head>
