Add favicon folder with files for styling across all pages

--- a/seasonal-suggestions.html
+++ b/seasonal-suggestions.html
@@ -176,7 +176,7 @@
             <br>
             <p>Don't forget to sign up to our newsletter for more tips and stories from our community.</p>
             <br>
-            <form style="display: inline" action="subscribe.html" method="get">
+            <form style="display: inline" action="subscribe.html" method="GET">
                 <button aria-label="Go to subscribe page to subscribe to our newsletter. (Page opens in the same window.)">Subscribe</button>
             </form>
         </section>
