--- a/subscribe.html
+++ b/subscribe.html
@@ -91,13 +91,24 @@
         <div>
             <ul id="social-networks">
                 <li>
-                    <a href="index.html" class="active" aria-label="Go to our homepage. Page opens in the same window.">Home</a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Go to Facebook homepage. (Page opens in a new tab.)">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
                 </li>
                 <li>
-                    <a href="seasonal-suggestions.html" aria-label="Go to Seasonal Suggestions page for tips about what to plan in different seasonal weather. (Page opens in the same window.)">Seasonal Suggestions</a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Go to Instagram homepage. (Page opens in a new tab.)">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
                 </li>
                 <li>
-                    <a href="subscribe.html" aria-label="Go to Subscribe page to register for our newsletter. (Page opens in the same window.)">Join</a>
+                    <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Go to Twitter, now known as X, homepage. (Page opens in a new tab.)">
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Go to Youtube homepage. (Page opens in a new tab.)">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
                 </li>
             </ul>
         </div>
