feat reduce footer padding to 10px to accomodate copywright

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </ul>
             <br>
             <!-- Author info -->
-            <h5></h5>
+            <h5>&copy; 2024 LcodeM</h5>
         </div>
     </footer>
     <!-- Font Awesome kit -->
