Add changes to README.md and TESTING.md files

--- a/subscribe.html
+++ b/subscribe.html
@@ -111,6 +111,8 @@
                     </a>
                 </li>
             </ul>
+            <!-- Author info -->
+            <h5>&copy; 2024 LcodeM</h5>
         </div>
     </footer>
     <!-- Font Awesome kit -->
