--- a/response.html
+++ b/response.html
@@ -86,6 +86,8 @@
                     </a>
                 </li>
             </ul>
+            <!-- Author info -->
+            <h5>&copy; 2024 LcodeM</h5>
         </div>
     </footer>
     <!-- Font Awesome kit -->
