--- a/seasonal-suggestions.html
+++ b/seasonal-suggestions.html
@@ -209,6 +209,8 @@
                     </a>
                 </li>
             </ul>
+            <!-- Author info -->
+            <h5>&copy; 2024 LcodeM</h5>
         </div>
     </footer>
     <!-- Font Awesome kit -->
