Remove 'class active' from nav menu on response page

--- a/response.html
+++ b/response.html
@@ -33,7 +33,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html" class="active" aria-label="Go to our homepage. Page opens in the same window.">Home</a>
+                    <a href="index.html" aria-label="Go to our homepage. Page opens in the same window.">Home</a>
                 </li>
                 <li>
                     <a href="seasonal-suggestions.html" aria-label="Go to Seasonal Suggestions page for tips about what to plan in different seasonal weather. (Page opens in the same window.)">Seasonal Suggestions</a>
