--- a/seasonal-suggestions.html
+++ b/seasonal-suggestions.html
@@ -20,7 +20,7 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 id="logo top">Fresh Patch 
+            <h1 id="logo">Fresh Patch 
                 <i class="fa-solid fa-carrot" id="logo-icon" aria-hidden="true"></i>
             </h1>
         </a>
@@ -182,7 +182,7 @@
         </section>
         <!-- To top button -->
         <div id="top-button-container">
-            <a id="top-button" href="#top" aria-label="Go to the top of the page">Top</a>
+            <a id="top-button" href="#logo" aria-label="Go to the top of the page">Top</a>
         </div>
     </main>
     <footer>
