remove controls from yt iframe

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <br>
             <!-- Youtube video container -->
             <div id="video-container">
-                <iframe id="frost-video" src="https://www.youtube.com/embed/EW01jeZGlQE?si=ExT1hFIeGFn6CcDa&mute=1" title="YouTube video player" controls muted allowfullscreen></iframe>
+                <iframe id="frost-video" src="https://www.youtube.com/embed/EW01jeZGlQE?si=ExT1hFIeGFn6CcDa&mute=1" title="YouTube video player" muted allowfullscreen></iframe>
             </div>
         </section>
         <!-- Subscribe button -->
