removed muted and controls from iframe

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Lewis Mayhew">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- meta information, describe the page for search engines -->
     <meta name="description" content="Fresh Patch. For beginner gardner tips and tricks through every season.">
@@ -111,7 +112,7 @@
             <br>
             <!-- Youtube video container -->
             <div id="video-container">
-                <iframe id="frost-video" src="https://www.youtube.com/embed/EW01jeZGlQE?si=ExT1hFIeGFn6CcDa&mute=1" title="YouTube video player" muted allowfullscreen></iframe>
+                <iframe id="frost-video" src="https://www.youtube.com/embed/EW01jeZGlQE?si=ExT1hFIeGFn6CcDa&mute=1" title="YouTube video player" autoplay="0" allowfullscreen></iframe>
             </div>
         </section>
         <!-- Subscribe button -->
