--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </section>
         <!-- To top button -->
         <div id="top-button-container">
-            <a id="top-button" href="top" aria-label="Go to the top of the page">Top</a>
+            <a id="top-button" href="#top" aria-label="Go to the top of the page">Top</a>
         </div>
     </main>
     <!-- Footer -->
