--- a/seasonal-suggestions.html
+++ b/seasonal-suggestions.html
@@ -167,7 +167,7 @@
             <br>
             <!-- Youtube video container -->
             <div id="video-container">
-                <iframe id="frost-video" src="https://www.youtube.com/embed/EW01jeZGlQE?si=ExT1hFIeGFn6CcDa&mute=1" title="YouTube video player" controls muted></iframe>
+                <iframe id="frost-video" src="https://www.youtube.com/embed/EW01jeZGlQE?si=ExT1hFIeGFn6CcDa&mute=1" title="YouTube video player" allowfullscreen></iframe>
             </div>
         </section>
         <!-- Subscribe button -->
